# ocr-gatekeeper

./: README.md  main.py
ocr_CPlus/: CMakeLists.txt  README.md
ocr_CPlus/src/: main.cpp
